fixed wrapper height overflow issue

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -17,8 +17,8 @@ body {
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 /*  white boxes (main and modal)*/
@@ -30,7 +30,7 @@ body {
   flex-direction: column;
   background-color: whitesmoke;
   padding: 1.5rem;
-  max-height: 100%;
+  max-height: calc(100% - 3rem);
   
   width: 100%;
   max-width: 100%;
